[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.13.0",
    "matplotlib>=3.10.1",
    "mne>=1.9.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pywavelets>=1.8.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "streamlit>=1.45.0",
    "xgboost>=3.0.0",
]
